# OmniFlow

./: .gitignore  LICENSE  README.de.md  README.en.md  README.ja.md  README.md  pyproject.toml  requirements.txt
docs/: AI_INTEGRATION_GUIDE.md
docs/locales/de/: AI_INTEGRATION_GUIDE.md  MCP_TOOLS_REFERENCE.md  README.md
docs/locales/en/: AI_INTEGRATION_GUIDE.md  MCP_TOOLS_REFERENCE.md  README.md
docs/locales/ja/: AI_INTEGRATION_GUIDE.md  MCP_TOOLS_REFERENCE.md  README.md
docs/locales/zh-CN/: MCP_TOOLS_REFERENCE.md  README.md
examples/ai_prompts/: game_automation.md  image_processing.md  office_automation.md  web_control.md
examples/workflows/: infinite_fish_auto_sell.json
src/omniflow/: __init__.py  __main__.py  server.py
src/omniflow/engine/: __init__.py  com.py  types.py
src/omniflow/tools/: __init__.py  binding.py  composite.py  detect.py  errors.py  image.py  input.py  memory.py  ocr.py  plugin.py  system.py  window.py  workflow.py
tests/: __init__.py  test_p0_wrap.py  test_p1_composite.py  test_tools.py  test_workflow_v2.py
