[project]
name = "omniflow"
version = "0.1.0"
description = "基于 MCP 协议的 Windows 桌面自动化全能工具"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "OmniFlow Team" }]

dependencies = [
    "mcp>=1.0.0",
    "pywin32>=306",
    "Pillow>=10.0.0",
    "pyautogui>=0.9.54",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
